<resources>
    <string name="app_name">Curva de la Canasta Basica</string>
    <string name="menu_titulo1">Canasta </string>
    <string name="menu_titulo2">Basica</string>
    <string name="menu_button1">Iniciar sesión</string>
    <string name="menu_pregunta">¿No tienes cuenta?</string>
    <string name="menu_button2">Regístrate.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="msj_inisesion_1">Iniciar sesion</string>
    <string name="msj_inisesion_2">Ingresa tu correo y contraseña</string>
    <string name="msj_inisesion_3">Correo institucional</string>
    <string name="msj_inisesion_4">Contraseña </string>
    <string name="msj_inisesion_5">Ingresa tu correo y contraseña</string>
    <string name="msj_inisesion_6">Continuar</string>
    <string name="msj_inisesion_8">Continuar con Google</string>
    <string name="msj_inisesion_7">¿Olvidaste tu contraseña?</string>

    <!-- Agrega estas líneas si no están -->
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>

    <!-- lineas de crear cuentas  -->
    <string name="msj_crearcuenta_1">Crear una cuenta</string>
    <string name="msj_crearcuenta_2">Ingresa tu correo y contraseña</string>
    <string name="msj_crearcuenta_3">Nombre de usuario</string>
    <string name="msj_crearcuenta_4">Correo institucional </string>
    <string name="msj_crearcuenta_5">Contraseña</string>
    <string name="msj_crearcuenta_6">Registrarme</string>
    <string name="msj_crearcuenta_7">Al hacer clic en Registrarme, aceptas nuestros</string>
    <string name="msj_crearcuenta_8">Términos</string>
    <string name="msj_crearcuenta_81">de Servicio</string>
    <string name="msj_crearcuenta_9">y la</string>
    <string name="msj_crearcuenta_10">Politica de privacidad.</string>

    <!-- lineas de recuperar contrase;-->
    <string name="msj_reccontra_1">Recuperar contraseña</string>
    <string name="msj_reccontra_2">Ingresa tu correo</string>
    <string name="msj_reccontra_3">Enviar correo de recuperacion</string>
    <string name="msj_reccontra_4">Volver a la pestaña anterior</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Mi Perfil</string>
    <string name="menu_gallery">Mis Profesores y Opiniones</string>
    <string name="menu_slideshow">Soporte</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="inicio_app_buscador">Buscar</string>
    <string name="inicio_app_recomendados">Precios de este mes</string>
    <string name="inicio_app_mejor_valorados">Mejor valorados</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_menu">Menu</string>

    <string name="textacercade">Esta aplicación permite a los usuarios estimar el costo de la canasta básica en su localidad. Nuestro objetivo es proporcionar una herramienta clara y accesible que ayude a las personas a tomar decisiones informadas sobre su presupuesto y necesidades esenciales.</string>
    <string name="ubiacercade">Blvd. Marcelino García Barragán #1421, esq Calzada</string>


</resources>