<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHeight_percent="1"
    app:layout_constraintWidth_percent="1"
    tools:context=".crear_cuenta">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cuadro_de_iniciosesion"
        android:elevation="10dp"
        android:translationY="-530dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msj_crearcuenta_1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/msj_crearcuenta_2"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msj_crearcuenta_3"
            android:textColor="#121010"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msj_inisesion_3"
            android:textColor="#0B0B0B"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/contrasenaLogin"
            app:layout_constraintStart_toStartOf="@+id/contrasenaLogin" />

        <EditText
            android:id="@+id/contrasenaLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:autoText="false"
            android:background="@drawable/barras_inisesion"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
            android:id="@+id/editTextTextEmailAddress7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/barras_inisesion"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenaLogin"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msj_crearcuenta_5"
            android:textColor="#0B0B0B"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress7"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress7" />

        <TextView
            android:id="@+id/ovidastecontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/msj_crearcuenta_7"
            android:textColor="#020404"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCrear" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/msj_crearcuenta_9"
            android:textColor="#020404"
            android:textSize="12sp"
            android:translationX="-75dp"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintTop_toTopOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/msj_crearcuenta_8"
            android:textColor="#02CCE6"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/ovidastecontra"
            app:layout_constraintTop_toTopOf="@+id/ovidastecontra" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/msj_crearcuenta_81"
            android:textColor="#02CCE6"
            android:textSize="12sp"
            android:translationX="-75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ovidastecontra" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/msj_crearcuenta_10"
            android:textColor="#02CCE6"
            android:textSize="12sp"
            android:translationX="-75dp"
            app:layout_constraintStart_toEndOf="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/textView33" />

        <EditText
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/barras_inisesion"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.9" />

        <Button
            android:id="@+id/buttonCrear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/msj_inisesion_6"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress7"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:imageZoom="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ventanainiciosesion" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_titulo2"
        android:textColor="#00D4ED"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationX="-15dp"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_titulo1"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationX="-30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilterView4"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView4"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView4"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>