<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".iniciar_sesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageFilterView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:imageZoom="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ventanainiciosesion" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_titulo1"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationX="-80dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageFilterView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageFilterView"
            app:layout_constraintTop_toTopOf="@+id/imageFilterView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_titulo2"
            android:textColor="#00D4ED"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationX="-70dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/cuadro_de_iniciosesion"
            android:elevation="10dp"
            android:translationY="-60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFilterView"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/msj_inisesion_1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/msj_inisesion_2"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msj_inisesion_3"
                android:textColor="#121010"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/correoLogin"
                app:layout_constraintStart_toStartOf="@+id/correoLogin" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msj_inisesion_4"
                android:textColor="#0B0B0B"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/contrasenaLogin"
                app:layout_constraintStart_toStartOf="@+id/contrasenaLogin" />

            <EditText
                android:id="@+id/correoLogin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/barras_inisesion"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8e"
                app:layout_constraintWidth_percent="0.9" />

            <EditText
                android:id="@+id/contrasenaLogin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/barras_inisesion"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correoLogin"
                app:layout_constraintWidth_percent="0.9" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:forceHasOverlappingRendering="false"
                android:text="@string/msj_inisesion_6"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contrasenaLogin"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/ovidastecontra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/msj_inisesion_7"
                android:textColor="#00BCD4"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/textnotienes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/menu_pregunta"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ovidastecontra" />

            <TextView
                android:id="@+id/registrateinic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/menu_button2"
                android:textColor="#00BCD4"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textnotienes3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>