<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/inicio"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_titulo2"
            android:textColor="#04CFE9"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationX="-70dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/menu_titulo1"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationX="-80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_ini_sesion_principal"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/menu_button1"
            android:textAlignment="center"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintWidth_percent="0.6" />

        <Button
            android:id="@+id/buttonInicgoogle"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/msj_inisesion_8"
            android:textAlignment="center"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_ini_sesion_principal"
            app:layout_constraintWidth_percent="0.55" />

        <Button
            android:id="@+id/Acesomn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#7CEAF4"
            android:text="Menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="31dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonInicgoogle"
            app:layout_constraintEnd_toStartOf="@+id/buttonInicgoogle"
            app:layout_constraintTop_toTopOf="@+id/buttonInicgoogle"
            app:srcCompat="@drawable/googleg_standard_color_18" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>